<resources>
    <string name="app_name">Short Term Memory Practice</string>
    <string name="title_activity_welcome_screen">WelcomeScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="symbol_1">♪</string>
    <string name="symbol_2">Ω</string>
    <string name="symbol_3">✻</string>
    <string name="symbol_4">✦</string>
    <string name="symbol_5">▼</string>
    <string name="symbol_6">■</string>

</resources>