<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    android:background="@drawable/main_menu_background">

    <Button
        android:id="@+id/btnDiamondShape"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:backgroundTint="@color/transparent"
        android:text="@string/symbol_6"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSnowflakeShape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toEndOf="@+id/btnSnowflakeShape"
        app:layout_constraintTop_toTopOf="@+id/btnSnowflakeShape"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSnowflakeShape"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:backgroundTint="@color/transparent"
        android:text="❆"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFilledDiamond"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnFlowerShape"
        app:layout_constraintTop_toBottomOf="@+id/btnFlowerShape"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnFilledDiamond"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:backgroundTint="@color/transparent"
        android:text="@string/symbol_4"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnFlowerShape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toEndOf="@+id/btnFlowerShape"
        app:layout_constraintTop_toTopOf="@+id/btnFlowerShape"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnFlowerShape"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:backgroundTint="@color/transparent"
        android:text="@string/symbol_3"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn5PointedStar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn8PointedStar"
        app:layout_constraintTop_toBottomOf="@+id/btn8PointedStar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn5PointedStar"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:backgroundTint="@color/transparent"
        android:text="@string/symbol_2"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn8PointedStar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toEndOf="@+id/btn8PointedStar"
        app:layout_constraintTop_toTopOf="@+id/btn8PointedStar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtLetterSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select shapes to remember"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMedium"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="Hard"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnMedium"
        app:layout_constraintTop_toBottomOf="@+id/txtDifficultyLevel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/Medium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnEasy"
        app:layout_constraintTop_toBottomOf="@+id/txtDifficultyLevel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtDifficultyLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Difficulty Level"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfLetterSlider"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/txtChosenNumberOfLetters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textColor="#040303"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtNumberOfOccurrences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/txtNumberOfOccurrences"
        app:layout_constraintTop_toTopOf="@+id/txtNumberOfOccurrences"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.slider.Slider
        android:id="@+id/numOfLetterSlider"
        android:layout_width="315dp"
        android:layout_height="30dp"
        android:stepSize="1"
        android:value="1"
        android:valueFrom="1"
        android:valueTo="10"
        app:labelBehavior="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumberOfOccurrences"
        app:layout_constraintVertical_bias="0.0"
        app:tickColor="@color/slider_tick_color"
        app:trackColor="@color/track_color" />

    <TextView
        android:id="@+id/txtNumberOfOccurrences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number of occurrences:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:text="@string/Easy"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDifficultyLevel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn8PointedStar"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:backgroundTint="@color/transparent"
        android:text="@string/symbol_1"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLetterSelection"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/track_color"
        android:text="Start"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnDiamondShape"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/btnSnowflakeShape"
        app:layout_constraintTop_toBottomOf="@+id/btnSnowflakeShape"
        app:layout_constraintVertical_bias="0.113" />

</androidx.constraintlayout.widget.ConstraintLayout>