<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnswerActivity"
    android:background="@drawable/answer_activity_background">

    <TextView
        android:id="@+id/txtAnswer6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtAnswerShape6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toEndOf="@+id/txtAnswerShape6"
        app:layout_constraintTop_toTopOf="@+id/txtAnswerShape6" />

    <TextView
        android:id="@+id/txtAnswerShape6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/symbol_6"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtAnswerShape5"
        app:layout_constraintStart_toStartOf="@+id/txtAnswerShape5"
        app:layout_constraintTop_toBottomOf="@+id/txtAnswerShape5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAnswer5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtAnswerShape5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toEndOf="@+id/txtAnswerShape5"
        app:layout_constraintTop_toTopOf="@+id/txtAnswerShape5" />

    <TextView
        android:id="@+id/txtAnswerShape5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/symbol_5"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtAnswerShape4"
        app:layout_constraintStart_toStartOf="@+id/txtAnswerShape4"
        app:layout_constraintTop_toBottomOf="@+id/txtAnswerShape4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAnswer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtAnswerShape4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toEndOf="@+id/txtAnswerShape4"
        app:layout_constraintTop_toTopOf="@+id/txtAnswerShape4" />

    <TextView
        android:id="@+id/txtAnswerShape4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/symbol_4"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtAnswerShape3"
        app:layout_constraintStart_toStartOf="@+id/txtAnswerShape3"
        app:layout_constraintTop_toBottomOf="@+id/txtAnswerShape3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAnswer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtAnswerShape3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toEndOf="@+id/txtAnswerShape3"
        app:layout_constraintTop_toTopOf="@+id/txtAnswerShape3" />

    <TextView
        android:id="@+id/txtAnswerShape3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/symbol_3"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtAnswerShape1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtAnswerShape1"
        app:layout_constraintTop_toBottomOf="@+id/txtAnswerShape2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAnswer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtAnswerShape2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toEndOf="@+id/txtAnswerShape2"
        app:layout_constraintTop_toTopOf="@+id/txtAnswerShape2" />

    <TextView
        android:id="@+id/txtAnswerShape2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/symbol_2"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtAnswerShape1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtAnswerShape1"
        app:layout_constraintTop_toBottomOf="@+id/txtAnswerShape1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAnswerShape1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_1"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <TextView
        android:id="@+id/txtAnswer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtAnswerShape1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toEndOf="@+id/txtAnswerShape1"
        app:layout_constraintTop_toTopOf="@+id/txtAnswerShape1" />

    <Button
        android:id="@+id/btnBackToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:text="Main Menu"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAnswer6"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:text="Try Again"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnBackToMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toEndOf="@+id/btnBackToMainMenu"
        app:layout_constraintTop_toTopOf="@+id/btnBackToMainMenu"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Score: "
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />
</androidx.constraintlayout.widget.ConstraintLayout>